--- a/packages.config
+++ b/packages.config
@@ -85,4 +85,6 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
   <package id="WindowsAPICodePack" version="8.0.6" targetFramework="net48" />
+  <package id="WixToolset.Netfx.wixext" version="5.0.2" targetFramework="net48" />
+  <package id="WixToolset.Util.wixext" version="5.0.2" targetFramework="net48" />
 </packages>
